fix z-index

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 form {
     width: 780px;
-    z-index: 10;
+    z-index: 11;
 
     .basicSearch {
         margin-bottom: 5px;
